manifests/cilium-gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: cert-manager
  annotations:
    cert-manager.io/cluster-issuer: timgiertz-prod-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: apps.timgiertz.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: wildcard-apps-timgiertz-com-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: cert-manager
spec:
  parentRefs:
  - name: my-gateway
  hostnames:
  - test.apps.timgiertz.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: my-nginx-service
      port: 80
